# ibex

./: Makefile
examples/fpga/cmod-a7-35/: README.md  top.core
examples/fpga/cmod-a7-35/data/: Cmod-A7-Master.xdc
examples/fpga/cmod-a7-35/rtl/: top.sv
examples/sw/led/: Makefile  cross.ini  meson.build
shared/: fpga_xilinx_cmod_a7_35.core
shared/rtl/fpga/xilinx/: clkgen_xil7series_nopll.sv
